--- a/extension/register.html
+++ b/extension/register.html
@@ -8,6 +8,8 @@
 <h1>Notionインテグレーション登録</h1>
 <p>Notionでインテグレーションを作成し、生成された<strong>Internal Integration Token</strong>を入力してください。</p>
 <input id="token" type="text" placeholder="secret_xxx" style="width: 100%;" />
+<p>作成したデータベースのIDも入力してください。</p>
+<input id="database" type="text" placeholder="xxxxxxxxxxxxxxxxxxxxxxxx" style="width: 100%;" />
 <button id="save">登録</button>
 <span id="status"></span>
 <script src="register.js"></script>
