--- a/extension/popup.html
+++ b/extension/popup.html
@@ -13,7 +13,7 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 
   document.getElementById('register').addEventListener('click', () => {
-    chrome.tabs.create({ url: chrome.runtime.getURL('register.html') });
+    chrome.runtime.openOptionsPage();
   });
 });
 </script>
