Add Jest setup and modularize page ID extraction

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Notion Tools</title>
+<script src="pageUtils.js"></script>
 <script src="popup.js"></script>
 </head>
 <body>
