Switch to is_toggleable API and clean up token handling

--- a/extension/register.html
+++ b/extension/register.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <h1>Notionインテグレーション登録</h1>
-<p>Notionでインテグレーションを作成し、生成された<strong>Internal Integration Token</strong>を入力してください。</p>
-<input id="token" type="text" placeholder="secret_xxx" style="width: 100%;" />
-<p>作成したデータベースのIDも入力してください。</p>
+<p>Chrome Identity API を使って Notion トークンを取得します。</p>
+<button id="auth">認証</button>
+<p>作成したデータベースのIDを入力してください。</p>
 <input id="database" type="text" placeholder="xxxxxxxxxxxxxxxxxxxxxxxx" style="width: 100%;" />
-<button id="save">登録</button>
+<button id="save">保存</button>
 <span id="status"></span>
 <script src="register.js"></script>
 </body>
