--- a/extension/popup.html
+++ b/extension/popup.html
@@ -8,6 +8,11 @@
 <body>
 <input id="pageTitle" type="text" placeholder="Page title" style="width:100%;" />
 <button id="createNewPage">Create Page</button>
+<select id="headingLevel">
+  <option value="1">H1</option>
+  <option value="2" selected>H2</option>
+  <option value="3">H3</option>
+</select>
 <button id="toggle">Convert headings</button>
 <button id="register">Setup Integration</button>
 <div id="status"></div>
